manifests/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aytu-dashboard
  template:
    metadata:
      labels:
        app: aytu-dashboard
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/hub
      volumes:
      - name: html-volume
        configMap:
          name: aytu-flix-dashboard-html
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  type: ClusterIP
  selector:
    app: aytu-dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
